--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ body.home main > section .column.one:before,
 	border-top: 2px solid #eab021;
 	color: #eab021;
 	text-align: center;
-	font-size: 1.4rem;
+	font-size: 1.2rem;
 	margin: 0 2rem;
 }
 /**
@@ -299,6 +299,15 @@ main .row.side-right .column.two {
 
 main .row.side-right .column.one > article {
 	margin: 0 2rem;
+}
+
+.demo-gallery {
+	width: 80%;
+	margin: 1rem auto 0;
+}
+
+.demo-gallery img{
+	width: 100%;
 }
 
 /**
