--- a/style.css
+++ b/style.css
@@ -880,9 +880,15 @@ form.search-bar {
 	border-radius: 3px 3px 0 0;
 	margin-right: 3px;
 	font-weight: bold;
+	color: #777;
+}
+.cwpvarietytab-wrapper .cwpvarietytab-tab.active {
+	background: #981e33;
+	color: #fff;
 }
 .cwpvarietytab-wrapper .cwpvarietytab-content {
-	border: 2px solid #ddd;
+	border-top: 2px solid #981e33;
+	border-bottom: 2px solid #ccc;
 	border-radius: 0 3px 3px 3px;
 	padding: 2rem 0;
 }
