--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  * Author:      CAHNRS Communications, Danial Bleile
  * Author URI:  http://cahnrs.wsu.edu/communications/
  * Description: 
- * Version:     1.0.1
+ * Version:     1.0.2
  * License:     Copyright Washington State University
  * License      URI: http://copyright.wsu.edu
  * Template:    WSUWP-spine-parent-theme
@@ -62,6 +62,10 @@ body.home main > section .column.one,
 body.home main > section .column.one:before,
 body.home main > section .column.one:after {
 	background-color: #fff;
+}
+
+.column.two {
+  padding-left: 0 !important;
 }
  
 /**
